tests/testcases/errors/BCE0085-2.boo
"""
BCE0085-2.boo(7,5): BCE0085: Cannot create instance of abstract class 'Foo'.
"""
class Foo(System.IDisposable):
	pass
	
f = Foo()
